--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,68 @@
-/*empty*/
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
+
+body {
+    font-family: "Rubik", sans-serif;
+    font-size: 1.3em;
+ }
+ section{
+    margin: 2em;
+    padding: 1em;
+    border: 0.3em dashed;
+ }
+ div {
+    padding: 1em;
+    margin: 0.8em;
+ }
+ header {
+    margin-left: 2em;
+    margin-right: 2em;
+    height: 10em;
+    overflow: hidden;
+ }
+ #headline {
+    margin-top: -48em;
+    padding: 1.4em;
+    position: absolute;
+ }
+ #headerimage {
+    opacity: 0.5;
+ }
+
+
+.allergen {
+    font-weight: bold;
+}
+#burger {
+    background-color: black;
+    color: white;
+}
+button:hover {
+    background-color: blue;
+ }
+.pointer {
+    cursor: pointer;
+    margin: 1em 5em;
+  }
+  .wrapper {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 20em 20em 20em;
+    background-color: black;
+    color: white;
+}
+.box {
+    background-color: black;
+    color: #fff;
+}
+
+.a {
+    grid-column: 1;
+}
+.b {
+    grid-column: 2 ;
+}
+.c {
+    grid-column: 3 ;
+}
